--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,7 @@ file.reference.bcpkix-jdk15on-149.jar=lib\\bcpkix-jdk15on-149.jar
 file.reference.bcprov-jdk15on-149.jar=lib\\bcprov-jdk15on-149.jar
 file.reference.itext-xtra-5.4.3.jar=lib\\itext-xtra-5.4.3.jar
 file.reference.itextpdf-5.4.3.jar=lib\\itextpdf-5.4.3.jar
+file.reference.plugin.jar=lib\\plugin.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -40,7 +41,8 @@ javac.classpath=\
     ${file.reference.bcpkix-jdk15on-149.jar}:\
     ${file.reference.bcprov-jdk15on-149.jar}:\
     ${file.reference.itext-xtra-5.4.3.jar}:\
-    ${file.reference.itextpdf-5.4.3.jar}
+    ${file.reference.itextpdf-5.4.3.jar}:\
+    ${file.reference.plugin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
