--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=
 excludes=
 file.reference.bcpkix-jdk15on-149.jar=lib\\bcpkix-jdk15on-149.jar
 file.reference.bcprov-jdk15on-149.jar=lib\\bcprov-jdk15on-149.jar
+file.reference.commons-io-2.4.jar=lib\\commons-io-2.4.jar
 file.reference.itext-xtra-5.4.3.jar=lib\\itext-xtra-5.4.3.jar
 file.reference.itextpdf-5.4.3.jar=lib\\itextpdf-5.4.3.jar
 file.reference.plugin.jar=lib\\plugin.jar
@@ -42,7 +43,8 @@ javac.classpath=\
     ${file.reference.bcprov-jdk15on-149.jar}:\
     ${file.reference.itext-xtra-5.4.3.jar}:\
     ${file.reference.itextpdf-5.4.3.jar}:\
-    ${file.reference.plugin.jar}
+    ${file.reference.plugin.jar}:\
+    ${file.reference.commons-io-2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
