--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -87,7 +87,7 @@ main.class=cl.sagalid.applet.CargaArchivo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.7
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
