Se modifica la aplicación de firma, de manera tal que se pueda agregar un código QR. Se optimiza tambien el applet para trabajar con plataforma JDK8

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -6,6 +6,7 @@ annotation.processing.source.output=${build.generated.sources.dir}/ap-source-out
 ant.customtasks.libs=JWSAntTasks
 application.title=AppletLinda
 application.vendor=Agust\u00edn
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -54,7 +55,8 @@ javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -84,10 +86,14 @@ jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
 main.class=cl.sagalid.applet.CargaArchivo
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.7
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -101,3 +107,6 @@ run.test.classpath=\
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
+endorsed.classpath=\
+    ${java.home}/lib/javaws.jar:\
+    ${java.home}/lib/plugin.jar
